# xagt-plugin

./: .gitignore  README.md  package.json
submissions/2054407797725990912-sandboxed-sh/source/: .dockerignore  .env.example  .gitignore  Cargo.toml  DEPLOYMENT_v0.7.8.md  Dockerfile  INSTALL.md  OAUTH_REFRESH_ANALYSIS.md  PERSISTENT_SESSIONS_DESIGN.md  PROVIDERS.md  PROVIDER_HEALTH_CHECK.md  README.md  agents.md  docker-compose.yml  mobile-app-reliability.md
submissions/2054407797725990912-sandboxed-sh/source/.githooks/: pre-push
submissions/2054407797725990912-sandboxed-sh/source/.github/workflows/: android-apk.yml  ci-debounced.yml.example  ci.yml
submissions/2054407797725990912-sandboxed-sh/source/android_dashboard/: .gitignore  README.md  build.gradle.kts  settings.gradle.kts  zapstore.yaml
submissions/2054407797725990912-sandboxed-sh/source/backend/: PERF_OVERHAUL.md  STREAMING.md
submissions/2054407797725990912-sandboxed-sh/source/capabilities/: matrix.v1.json
submissions/2054407797725990912-sandboxed-sh/source/dashboard/: .gitignore  README.md  next.config.ts  package.json  playwright.config.ts  tsconfig.json  vitest.config.ts
submissions/2054407797725990912-sandboxed-sh/source/docker/: Caddyfile  entrypoint.sh  i3config
submissions/2054407797725990912-sandboxed-sh/source/docs/: BACKEND_API.md  CAPABILITY_MATRIX.md  DESKTOP_SETUP.md  DOCKER_ANALYSIS.md  HARNESS_SYSTEM.md  HERMES_ASSISTANT_MIGRATION.md  MISSION_API.md  MISSION_FINISH_DETECTION.md  PALOMA_QWENPAW_ADAPTATION_PLAN.md  PALOMA_QWENPAW_COMPLETION_AUDIT.md  PALOMA_TELEGRAM_ROADMAP.md  TELEGRAM_ASSISTANT.md  THOUGHT_STREAMING_BUG_REPORT.md  WORKSPACES.md  WORKSPACE_API.md  getting-started.md  grok-goal-integration-proposal.md  install-docker.md  install-native.md
submissions/2054407797725990912-sandboxed-sh/source/docs-site/: .gitignore  mdx-components.tsx  next.config.mjs  package.json  proxy.ts  tsconfig.json
submissions/2054407797725990912-sandboxed-sh/source/ios_dashboard/: IOS_PERFORMANCE_DIAGNOSTICS.md  ISSUES.md  ITERATION_8_COMPLETION.md  Package.swift  README.md  UX_BLOCKING_AUDIT.md  project.yml
submissions/2054407797725990912-sandboxed-sh/source/scripts/: README.md  assistant_mcp_smoke.sh  check-capability-matrix.sh  check-memory.sh  check.sh  deploy.sh  generate_ios_icons.js  harness_contract_tests.sh  http_client.py  install_desktop.sh  mission_browser_smoke.py  mission_debug_bundle.sh  mission_stream_smoke.env.example  mission_stream_smoke.py  paloma_live_smoke.py  proxy_smoke.py  setup_android_release_secrets.sh  smoke_harnesses_dev.sh  telegram_user_smoke.py  validate_skill_isolation.sh
submissions/2054407797725990912-sandboxed-sh/source/shared/: control-reducer-fixtures.json
submissions/2054407797725990912-sandboxed-sh/source/src/: agent_config.rs  ai_providers.rs  backend_config.rs  config.rs  cost.rs  lib.rs  main.rs  nspawn.rs  opencode_config.rs  pkg_manager.rs  provider_health.rs  settings.rs  skills_registry.rs  util.rs  workspace.rs  workspace_exec.rs
submissions/2055715141135110144-rebelbjj/source/: .gitignore  Cargo.toml  HANDOFF.md  README.md  bun.lockb  index.html  package-lock.json  package.json  tailwind.config.ts  vercel.json
submissions/2055715141135110144-rebelbjj/source/anchor/: .gitignore  Anchor.toml  Cargo.toml  README.md
submissions/2055715141135110144-rebelbjj/source/api/: health.rs  verifications.rs
submissions/2055715141135110144-rebelbjj/source/backend/: Cargo.toml  README.md
submissions/2055715141135110144-rebelbjj/source/rust-api/: lib.rs
submissions/2055715141135110144-rebelbjj/source/src/: App.tsx  index.css  vite-html2pdf.d.ts
(+1102 files in other folders)
