[package]
name = "sandboxed_sh"
version = "1.3.0"
edition = "2021"
rust-version = "1.91"
description = "Self-hosted orchestrator for AI coding agents (formerly Open Agent)"
authors = ["sandboxed.sh Contributors"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework
axum = { version = "0.7", features = ["ws", "multipart"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"

# HTTP client
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
reqwest-eventsource = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
async-trait = "0.1"
futures = "0.3"

# For tool implementations
walkdir = "2"
urlencoding = "2"
url = "2"
anyhow = "1"
async-stream = "0.3"
regex = "1"
async-recursion = "1"

# For memory/storage
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
croner = "2"
rusqlite = { version = "0.31", features = ["bundled"] }

# For desktop tools (process management on Unix)
libc = "0.2"

# Auth (JWT)
jsonwebtoken = "9"

# Cryptography for secrets
aes-gcm = "0.10"
pbkdf2 = "0.12"
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
hex = "0.4"

# Remote console / file manager
base64 = "0.22"

# System monitoring
sysinfo = "0.32"
bytes = "1"
portable-pty = "0.9"
md5 = "0.7"
tokio-util = { version = "0.7", features = ["io"] }

# Backup/restore
zip = "2"
# Keep MSRV-compatible idna_adapter for the production builder (rustc 1.75).
idna_adapter = "=1.1.0"

# File locking for OAuth token refresh synchronization
fs2 = "0.4"
ureq = { version = "2", features = ["json"] }

# Gzip compression for mission export/import transport. flate2 already
# lands transitively via zip/tokio-util; naming it explicitly keeps the
# feature gate visible and lets `cargo update` move it deliberately.
flate2 = "1"

[[bin]]
name = "sandboxed-sh"
path = "src/main.rs"

[[bin]]
name = "desktop-mcp"
path = "src/bin/desktop_mcp.rs"

[[bin]]
name = "workspace-mcp"
path = "src/bin/workspace_mcp.rs"

[[bin]]
name = "automation-manager-mcp"
path = "src/bin/automation_manager_mcp.rs"

[[bin]]
name = "orchestrator-mcp"
path = "src/bin/orchestrator_mcp.rs"

[[bin]]
name = "assistant-mcp"
path = "src/bin/assistant_mcp.rs"

[[bin]]
name = "fido-agent-proxy"
path = "src/bin/fido_agent_proxy.rs"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
